# django-snart

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
snart/: __init__.py  admin.py  apps.py  filters.py  translation.py
snart/management/commands/: discover_snarts.py
snart/migrations/: 0001_initial.py
snart/models/: __init__.py  constant.py
snart/static/snart/css/: style.css
snart/templatetags/: snart.py
